2010-03-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSObject.m:
	* Source/Additions/GSObjCRuntime.m:
	* Documentation/Base.gsdoc:
	* Headers/Additions/GNUstepBase/GSObjCRuntime.h:
	Add GNUSTEP_BEHAVIOR_DEBUG enovironment variable to turn on logging
	of the use of behaviors/overrides of class methds by a list of
	methods from another class.

2010-03-08 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSArray.m: Re-remove [GSMutableArray count] (GSMutableArray
	uses the GSArray implementation).
	* Source/GSDictionary.m:
	* Source/GSCountedSet.m:
	* Source/GSSet.m:
	Add the same sort of NSUInteger fixups that Fred added to GSArray.m
	* Headers/Additions/GNUstepBase/GSUnion.h:
	Add support for NSInteger and NSUInteger (so GSCountedSet can use them).

2010-03-07  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSArray.m: Re-add [GSMutableArray count]. Change all
	method parameters from int or unsigned to NSUInteger to match
	super classes.

2010-03-07 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSObjCRuntime.m:
	* Headers/Additions/GNUstepBase/GSObjCRuntime.h:
	Add function to add 'overrides' as a form of programmatically
	controlled category similar to behaviors, giving an app control
	over the order in which methods are added to a class.

2010-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSCompatibility.h:
	* Source/Additions/GSCompatibility.m:
	* Source/Additions/GSNextRuntime.m:
	Remove obsolete OSX compatibility files.

2010-03-05 Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSArray.m:
	* Source/GSDictionary.m:
	* Source/NSURLProtocol.m:
	* Source/NSNotificationCenter.m:
	* Source/GSAttributedString.m:
	* Source/NSURL.m:
	* Source/NSObject.m:
	* Source/NSString.m:
	* Source/Additions/NSAttributedString+GNUstepBase.m:
	* Source/Additions/GSInsensitiveDictionary.m:
	* Source/GSString.m:
	* Source/NSData.m:
	* Source/GSValue.m:
	* Source/NSValue.m:
	* Source/NSArchiver.m:
	* Source/NSURLConnection.m: